Implemented expiration policy support.